# Ancient-OCR

./: .gitignore  CLAUDE.md  CLAUDE_CODE_SPRINT_V2.md  DRAWING_SPRINT.md  MASTER_PLAN.md  PLATFORM_PLAN.md  SPRINT_1_LINE_REVIEW.md  config.yaml  main.py  pyproject.toml  requirements.txt
align/: openiti.py
alignment/: bbox_alignment.py  string_similarity.py  token_matcher.py
api/: routes.py  schemas.py  server.py
cli/: commands.py  main.py
confidence_engine/: decision.py  scoring.py  state.py
config/: profiles.yaml
data/: .gitignore
docs/: SESSION_STATE.md
documents/: cluster.py  store.py
eval/: benchmark.py  metrics.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
ingest/: document_loader.py  region_cropper.py
lexicon_engine/: candidate_generator.py  context_scorer.py  query_engine.py  ranker.py  scorer.py
lexicon_ingestion/: downloader.py  index_builder.py  parser.py  sources.py  storage.py
models/: .gitignore
morphology/: camel_adapter.py  pattern_analyzer.py  root_extractor.py
normalization/: arabic_normalizer.py  noise_filter.py  stopword_filter.py
ocr_engine/: base.py  ensemble.py  kraken_backend.py  paddle_backend.py  profile_loader.py  schema.py  tesseract_backend.py  trocr_backend.py
output/: debug_export.py  formatter.py  json_export.py  markdown_export.py  review_export.py
preprocessing/: adjustments.py  denoise.py  deskew.py  image_pipeline.py  layout_detection.py  thresholding.py  token_filter.py
scripts/: download_lexicons.py  generate_line_crops.py  ingest_ibn_awwam.py  (+2 more)
(+65 files in other folders)
